# CausalPFN

./: .gitignore  LICENSE  README.md  REPRODUCE.md  env_reproduce.yaml  pyproject.toml
benchmarks/: __init__.py  acic2016.py  base.py  criteo.py  hillstrom.py  ihdp.py  lenta.py  megafon.py  polynomial.py  realcause.py  retail_hero.py
benchmarks/baselines/: __init__.py  bart.py  base.py  catenets.py  econml.py  grf.py  ipw.py
notebooks/: calibration.ipynb  causal_effect.ipynb  causal_effect_full.ipynb  hillstrom_marketing.ipynb  qini.ipynb  utils.py
src/causalpfn/: __init__.py  causal_estimator.py  evaluation.py  utils.py
src/causalpfn/models/: __init__.py  icl_model.py  loading.py  model.py  transformer_layer.py  utils.py
