[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causalpfn"
version = "0.1.2"
description = "Amortized Causal Effect Estimation via In-Context Learning"
authors = [
  { name="Vahid Balazadeh", email="balazadehvahid@gmail.com" },
  { name="Hamidreza Kamkari", email="hamidrezakamkari@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "torch>=2.0",
  "numpy>=1.24",
  "tqdm",
  "faiss-cpu>=1.9.0",
  "scikit-learn>=1.5.2",
  "econml>=0.15.1",
  "huggingface_hub"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


[project.optional-dependencies]
dev = [
  # Lint/format
  # Test
  "pytest",
  "black",
  "isort",
  "jupyter",
  "ipython",
  "pandas",
  "pytest-cov",
  "matplotlib",
  "scikit-uplift",
  "python-dotenv==1.1.0",
  "FLAML[automl]"
]

[tool.isort]
skip = [
    "venv/",
    ".pytest_cache/",
]

[tool.black]
line-length = 120
include = '\.py$'
exclude = '/venv/|/\.pytest_cache/'
